# scrible-pad

./: Cargo.toml  readme.md
backend/: Cargo.toml  DockerFile
backend/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
pkg/: scrible_pad.d.ts  scrible_pad.js  scrible_pad_bg.wasm  scrible_pad_bg.wasm-opt.wasm
site/: index.html  index.js  rust_call.js  styles.css
src/: client.rs  lib.rs  server.rs
