[package]
name = "scrible-pad"
version = "0.1.0"
edition = "2024"

[dependencies]
async-once-cell = "0.5.4"
futures-util = "0.3.31"
lazy_static = "1.5.0"
once_cell = "1.21.3"
send_wrapper = { version = "0.6.0", features = ["futures"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt", "sync"] }
tokio-tungstenite-wasm = "0.6.0"
wasm-bindgen = { version = "0.2.100", features = ["serde", "serde_json"] }
wasm-bindgen-futures = "0.4.50"
ws_stream_wasm = "0.7.5"
yew = { version = "0.21.0", features = ["csr"] }

[lib]
crate-type = ["cdylib"]
